--- a/css/custom.v2.css
+++ b/css/custom.v2.css
@@ -56,3 +56,8 @@
 .sdw-inset {
     box-shadow: inset 0 0 0 2000px rgba(7, 7, 29, 0.432) !important;
 }
+
+
+.text-dark {
+    font-family: sans-serif !important;
+}
