--- a/css/custom.v2.css
+++ b/css/custom.v2.css
@@ -61,3 +61,39 @@
 .text-dark {
     font-family: sans-serif !important;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box; 
+}
+
+/**
+ * Backgrounds
+ */
+ .backgrounds {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    z-index: -1; }
+    .backgrounds .background {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-attachment: fixed; }
+  
+  .overlay:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background: #3F51B5;
+    opacity: 0.8; }
+  
